@@ -1,3 +1,7 @@
+2009-12-08  Phil Muldoon  <pmuldoon@redhat.com>
+
+	* gdb.python/py-type.exp (test_range): New test.
+
 2009-12-03  Phil Muldoon <pmuldoon@redhat.com>
 
 	PR python/10805
